# bd_datasets_003

./: .gitignore  README.md  buildspec.yml  docker-compose.yml  pec.yml
00mnay-java-batch-style-optimization/: README.md
0as36h-evm-log-indexer-with-chain-reorg-handling/: README.md
0cniqc-crash-consistent-lsm-storage-engine-with-true-leveled-compaction/: README.md
0khyia-invoice-tracking-system/: README.md
0qjin4-cinema-booking-system/: .gitignore  Dockerfile  README.md  docker-compose.yml
0qp2sh-edge-case-test-failures-in-python-currency-formatting-test-suites/: README.md
0t29d9-interactive-quiz/: .gitignore  Dockerfile  README.md  docker-compose.yml
0tychg-distributed-lock-manager-demo-with-vue-3-and-fastapi/: .gitignore  Dockerfile  README.md  docker-compose.yml
0v9vcn-data-processing-system-test-case-generation/: README.md
13761y-real-time-collaborative-polling-system/: Dockerfile  README.md  docker-compose.yml
13939j-news-reader/: .gitignore  Dockerfile  README.md  docker-compose.yml  jest.config.js  package.json
13dju2-implement-high-performance-click-streak-counter-in-react/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
16orin-e-commerce-order-processing-system-testing-suite/: README.md
17qj8e-rfid-middleware-rssi-smoothing-directionality-logic/: .gitignore  Dockerfile  README.md  buildspec.yml  docker-compose.yml
1h6lvz-context-aware-dependency-resolver/: Dockerfile  README.md  docker-compose.yml
1jbfmo-implement-reusable-circuit-breaker-for-backend-services/: .gitignore  Dockerfile  README.md  docker-compose.yml  jest.config.js  package.json  tsconfig.json
1jhc5m-develop-local-transaction-intelligence-engine/: .gitignore  Dockerfile  README.md  docker-compose.yml
1ld9qy-refactor-and-fully-test-financial-discount-calculator-with-decimal-precision/: README.md
1mw4kx-gratitude-journaling-app/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
1n3f55-deterministic-pricing-engine-for-e-commerce-orders-items-discounts-tax-shipping-refunds/: README.md
1pxo0k-swift-task-collaborative-board/: Dockerfile  README.md  docker-compose.yml
1sit06-container-scheduler-performance-optimization/: README.md
1zdtv5-adding-a-new-feature-to-an-existing-python-based-rest-api-used-for-managing-user-generated-notes/: README.md
22o2re-forensic-tcp-stream-reassembly-engine/: Dockerfile  README.md  docker-compose.yml
23dqf9-task-concurrency-orchestrator/: .gitignore  Dockerfile  README.md  docker-compose.yml
26eico-sales-data-pipeline-memory-and-performance-optimization/: .gitignore  README.md  docker-compose.yml  requirements.txt
26s5pk-thread-safe-parallel-build-system-with-dependency-management/: README.md
2c3g9w-real-time-collaborative-kanban-board/: README.md
2c3s9d-python-testcontainers-integration-test-suite-for-payment-microservice/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
2s99h8-l7-circuit-breaker-proxy-refactor/: .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod
2sbvd2-kanban-board-tests/: .dockerignore  Dockerfile  README.md  docker-compose.yml  jest.meta.config.js
2t3bt2-high-fidelity-e2e-testing-for-pricing-calculator-ui-and-billing-logic/: README.md
359jaf-gc-optimization-via-sync-pool-and-buffer-reuse/: .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod
37tsk9-writing-a-test-for-high-performance-byte-copy-function-for-embedded-signal-processing/: README.md
3arv9v-deterministic-notification-delivery-queue-with-dirty-input-safety/: README.md
3bz4lq-audio-signal-processing-double-clap-state-machine/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
3bz4lq-audio-signal-processing-double-clap-state-machine/evaluation/: evaluate.cpp
3bz4lq-audio-signal-processing-double-clap-state-machine/instances/: instance.json
3bz4lq-audio-signal-processing-double-clap-state-machine/patches/: diff.patch
3bz4lq-audio-signal-processing-double-clap-state-machine/repository_after/: ClapSwitch.cpp  ClapSwitch.h
3bz4lq-audio-signal-processing-double-clap-state-machine/tests/: test_clap_switch.cpp
3bz4lq-audio-signal-processing-double-clap-state-machine/trajectory/: trajectory.md
3c0m2o-cpp-threadpool-task/: README.md
3f9qc5-maximum-sum-subarray-with-minimum-length-constraint/: .gitignore  Dockerfile  README.md  docker-compose.yml
3g0f59-retry-queue-test-suite-evaluation/: README.md
3i7net-webhook-delivery-system-with-retry-queue/: Dockerfile  README.md  docker-compose.yml
3ju0gk-atomic-inventory-management-with-row-level-locking/: .gitignore  Dockerfile  README.md  docker-compose.yml
3lk5o1-order-fulfillment-warehouse-management-system-full-stack/: README.md
3n7t95-driver-trip-event-processor-with-safe-state-transitions-go/: README.md
3olq35-react-virtualized-data-grid-performance-fix/: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  buildspec.yml  docker-compose.yml  entrypoint.sh  package-lock.json  package.json
3qkgwu-hyperbolic-graph-neural-network-for-hierarchical-embeddings/: README.md
3s3pmy-vanilla-js-table-explorer-with-search-sort-and-inline-editing/: .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  playwright.config.js
3soc62-simple-inventory-management-system/: README.md
4cs3s2-lru-cache-tests/: Dockerfile  (+2 more)
blhrkn-c-recursive-descent-json-parser/repository_before/: CMakeLists.txt  json_parser.cpp  json_parser.h  json_value.cpp  lexer.cpp  main.cpp
ou64fl-cpp-collection-implementation/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
ou64fl-cpp-collection-implementation/evaluation/: CMakeLists.txt  evaluate.cpp  evaluate.sh
ou64fl-cpp-collection-implementation/instances/: instance.json
ou64fl-cpp-collection-implementation/patches/: diff.patch
ou64fl-cpp-collection-implementation/repository_after/: main.cpp  record_processor.cpp  record_processor.h
ou64fl-cpp-collection-implementation/tests/: test_main.cpp  test_record_processor.cpp
ou64fl-cpp-collection-implementation/trajectory/: trajectory.md
(+6114 files in other folders)
